--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "tailwindcss": "^3.4.3"
   },
   "dependencies": {
-    "el-transition": "^0.0.7"
+    "@rails/actiontext": "^7.1.3-2",
+    "el-transition": "^0.0.7",
+    "trix": "^2.1.0"
   }
 }
